@@ -1,8 +1,6 @@
-# Generated by mksrcinfo v8
-# Thu Aug 17 09:49:47 UTC 2017
 pkgbase = pology-svn
 	pkgdesc = A framework for custom processing of PO files.
-	pkgver = 1495839
+	pkgver = 1534626
 	pkgrel = 1
 	url = http://techbase.kde.org/Localization/Tools/Pology
 	changelog = changelog
